schad-final-branch

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-</head>
-<body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  </head>
+  <body>
     <h1>Less Go.</h1>
-    <h2>Dercio is here.</h2>
-</body>
+    <h2
+      style="
+        color: red;
+        margin: auto;
+        color: white;
+        font: 700 normal 2.5em 'tahoma';
+        text-shadow: 5px 2px #222324, 2px 4px #222324, 3px 5px #222324;
+      "
+    >
+      Schadrack is here.
+    </h2>
+  </body>
 </html>
